--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <main>
     <h2> hola </h2>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam ad molestias necessitatibus quae architecto, in unde, sint illo dignissimos neque, fugit quos eaque accusamus ex fuga suscipit voluptates possimus vero!
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit natus quisquam facere ipsa dignissimos optio fugiat culpa, assumenda quis voluptatibus modi magni aspernatur quia, soluta officia vitae cum rem.</p>
 
 </main> 
 <section> Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ipsa facilis aliquid expedita necessitatibus officiis eius ea! Sequi vero accusamus modi quasi, fugiat tempora aut aliquid consequatur ipsa quia voluptates ex.</section>
