--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h1>probndo git</h1>
 </header>   
 <main>
+    <section> <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Enim in rem sint reiciendis iure nesciunt provident debitis? Consectetur, hic tenetur.</p>
+    </section>
     <h2> hola </h2>
     Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam ad molestias necessitatibus quae architecto, in unde, sint illo dignissimos neque, fugit quos eaque accusamus ex fuga suscipit voluptates possimus vero!
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit natus quisquam facere ipsa dignissimos optio fugiat culpa, assumenda quis voluptatibus modi magni aspernatur quia, soluta officia vitae cum rem.</p>
